--- a/wf-region/src/main/resources/pattern/print/subsidy.html
+++ b/wf-region/src/main/resources/pattern/print/subsidy.html
@@ -1,1 +1,100 @@
-        <div>TODO write content</div>
+<!DOCTYPE html>
+<html>
+<head lang="ru">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>Заява</title>
+
+    <!-- Styles :: THEME -->
+    <link rel="stylesheet" href="media_print.css"/>
+    <link rel="stylesheet" href="documents.css"/>
+</head>
+<body>
+    <section class="print_wrap">
+        <div class="line_col ta-r">
+            <div class="under_field w350 ta-l"><i></i><span>(найменування структурного підрозділу</span></div><br />
+            <div class="under_field w350 ta-l"><i></i><span>з питань соціального захисту населення)</span></div>
+        </div>
+        <div class="line_col ta-c m-t-25">
+            ЗАЯВА<br />
+            про призначення житлової субсидії<br />
+            <div class="under_field_line ta-l"><i>Від [bankIdlastName] [bankIdfirstName] [bankIdmiddleName]</i><span>(прізвище, ім’я, по батькові)</span></div>
+            <div class="under_field_line ta-l"><i>зареєстроване (для орендарів — фактичне) місце проживання: [place_of_living]</i></div>
+            <div class="under_field_line ta-l"></div>
+            <div class="under_field_line ta-l"><i>контактний телефон [phone]</i>
+                <div class="under_field_line ta-l m-l-300"><i>паспорт: [bankIdPassport]</i>
+                    <div class="under_field_line ta-l m-l-180"><i></i></div></div></div>
+            <div class="under_field_line ta-l"><span>(ким і коли виданий)</span><div class="month-fl"><span></span><span></span><span></span>р.</div></div>
+            <div class="under_field_line ta-l"><i>реєстраційний номер облікової картки платника податків: [book]</i><span>(крім осіб, які мають відмітку у паспорті про право здійснювати платежі за серією та номером паспорта)</span></div>
+            <div class="under_field_line wub ta-l ti-15 m-t-25">Прошу призначити субсидію для відшкодування витрат на оплату житлово-комунальних послуг, на придбання скрапленого газу, твердого та рідкого пічного побутового палива (необхідне підкреслити).</div>
+            <div class="under_field_line wub ta-l ti-15">Відомості про житлово-комунальні послуги, якими користуються особи, які зареєстровані (фактично проживають) у житловому приміщенні/будинку.</div>
+            <table class="zit_v-form">
+                <tr>
+                    <td class="w225">Вид послуги</td>
+                    <td class="w145">Номер особового рахунка</td>
+                    <td class="w185">Найменування організації, що надає послуги</td>
+                    <td>Примітки</td>
+                </tr>
+                <tr>
+                    <td class="ta-l">Утримання будинків і споруд та прибудинкових територій</td>
+                    <td>[house_number]</td>
+                    <td>[house_name]</td>
+                    <td>[house_number]</td>
+                </tr>
+                <tr>
+                    <td class="ta-l">Газопостачання</td>
+                    <td>[gas_number]</td>
+                    <td>[gas_name]</td>
+                    <td>[gas_notice]</td>
+                </tr>
+                <tr>
+                    <td class="ta-l">Централізоване постачання холодної води</td>
+                    <td>[coolwater_number]</td>
+                    <td>[coolwater_name]</td>
+                    <td>[coolwater_notice]</td>
+                </tr>
+                <tr>
+                    <td class="ta-l">Централізоване постачання гарячої води</td>
+                    <td>[hotwater_number]</td>
+                    <td>[hotwater_name]</td>
+                    <td>[hotwater_notice]</td>
+                </tr>
+                <tr>
+                    <td class="ta-l">Водовідведення</td>
+                    <td>[waterback_number]</td>
+                    <td>[waterback_name]</td>
+                    <td>[waterback_notice]</td>
+                </tr>
+                <tr>
+                    <td class="ta-l">Централізоване опалення</td>
+                    <td>[warming_number]</td>
+                    <td>[warming_name]</td>
+                    <td>[warming_notice]</td>
+                </tr>
+                <tr>
+                    <td class="ta-l">Електропостачання</td>
+                    <td>[electricity_number]</td>
+                    <td>[electricity_name]</td>
+                    <td>[electricity_notice]</td>
+                </tr>
+                <tr>
+                    <td class="ta-l">Вивезення побутових відходів</td>
+                    <td>[garbage_number]</td>
+                    <td>[garbage_name]</td>
+                    <td>[garbage_notice]</td>
+                </tr>
+            </table>
+            <div class="under_field_line wub ta-l ti-15">У разі коли прийняття рішення щодо моєї заяви потребує окремого рішення місцевих органів виконавчої влади/місцевого самоврядування або утвореної ними комісії, прошу розглянути/не розглядати мою заяву відповідними органами або утвореною ними комісією ([notice]).</div>
+            <div class="under_field_line wub ta-l ti-15">Я та особи, які зареєстровані (фактично проживають) у житловому приміщенні/будинку, даємо згоду на обробку персональних даних про сім’ю, доходи, майно, що необхідні для призначення житлової субсидії, та оприлюднення відомостей щодо її призначення.</div>
+            <div class="under_field_line wub ta-l ti-15">У разі зміни обставин, які можуть вплинути на отримання житлової субсидії (зміни складу осіб, які зареєстровані (фактично проживають), джерел доходу, переліку отримуваних житлово-комунальних послуг, придбання майна, товарів або оплати послуг на суму, що перевищує 50 тис. гривень), зобов’язуюся протягом місяця повідомити про це структурний підрозділ з питань соціального захисту населення.</div>
+
+            <div class="date_subm">
+                <div class="month-fl-sm"><span></span><span></span>20<span></span>р.</div>
+                <div class="signature"><span>(підпис)</span></div>
+                <div class="clear"></div>
+            </div>
+            <div class="clear"></div>
+            <p>Примітка. Ця заява заповнюється особою, на яку відкрито особовий рахунок із сплати житлово-комунальних послуг (особою, яка фактично сплачує вартість одержуваних послуг).</p>
+        </div>
+    </section>
+</body>
+</html>
