--- a/central-js/client/app/header/header.html
+++ b/central-js/client/app/header/header.html
@@ -44,7 +44,7 @@
                     ui-sref-active="selected">
                     <a style="margin-top: 5px;"
                     ui-sref="index.order.search">
-                        <h4>Заявки</h4>
+                        <h4>Статуси</h4>
                     </a>
                 </li>
                 <li style="height: 90px;"
