integrate intlTelInput into angular

--- a/central-js/client/app/service/country/built-in/bankid.html
+++ b/central-js/client/app/service/country/built-in/bankid.html
@@ -165,6 +165,7 @@
                                  ng-messages="form[property.id].$error">
                                 <div ng-message="required">Необхідно заповнити.</div>
                                 <div ng-message="pattern">Значення має бути числом.</div>
+                                <div ng-message="tel">Помилка в номері телефону.</div>
                                 <div ng-message="email">Помилка в email.</div>
                             </div>
                         </div>
