--- a/central-js/client/app/service/city/absent.html
+++ b/central-js/client/app/service/city/absent.html
@@ -42,6 +42,8 @@
                         <span class="error" ng-if="absentMessageForm.email.$error.required">Введіть Вашу email-адресу</span>
                         <span class="error" ng-if="absentMessageForm.email.$error.email">Введіть коректну email адресу</span>
                     </div>
+
+                    <input ng-intl-tel-input />
                 </form>
             </div>
           </div>
