fix print form++

--- a/wf-region/src/main/resources/pattern/print/subsidy_body-fail.html
+++ b/wf-region/src/main/resources/pattern/print/subsidy_body-fail.html
@@ -1,3 +1,4 @@
+    <section class="print_wrap">
         <div class="line_col ta-r">
             <div class="under_field w350 ta-l"><i></i><span>(найменування структурного підрозділу</span></div><br />
             <div class="under_field w350 ta-l"><i></i><span>з питань соціального захисту населення)</span></div>
@@ -83,3 +84,4 @@
             <div class="clear"></div>
             <p>Примітка. Ця заява заповнюється особою, на яку відкрито особовий рахунок із сплати житлово-комунальних послуг (особою, яка фактично сплачує вартість одержуваних послуг).</p>
         </div>
+    </section>
