--- a/wf-region/src/main/resources/pattern/print/subsidy_full-fail.html
+++ b/wf-region/src/main/resources/pattern/print/subsidy_full-fail.html
@@ -1,3 +1,15 @@
+<!DOCTYPE html>
+<html>
+<head lang="ru">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>Заява</title>
+
+    <!-- Styles :: THEME -->
+    <link rel="stylesheet" href="media_print.css"/>
+    <link rel="stylesheet" href="documents.css"/>
+</head>
+<body>
+    <section class="print_wrap">
         <div class="line_col ta-r">
             <div class="under_field w350 ta-l"><i></i><span>(найменування структурного підрозділу</span></div><br />
             <div class="under_field w350 ta-l"><i></i><span>з питань соціального захисту населення)</span></div>
@@ -83,3 +95,6 @@
             <div class="clear"></div>
             <p>Примітка. Ця заява заповнюється особою, на яку відкрито особовий рахунок із сплати житлово-комунальних послуг (особою, яка фактично сплачує вартість одержуваних послуг).</p>
         </div>
+    </section>
+</body>
+</html>
