fix print form+++

--- a/wf-region/src/main/resources/pattern/print/subsidy.html
+++ b/wf-region/src/main/resources/pattern/print/subsidy.html
@@ -1,23 +1,14 @@
+        <div class="line_col ta-c m-t-25">
             ЗАЯВА<br />
             про призначення житлової субсидії<br />
-            <table class="zit_v-form">
-                <tr>
-                    <td class="w225">Вид послуги</td>
-                    <td class="w145">Номер особового рахунка</td>
-                    <td class="w185">Найменування організації, що надає послуги</td>
-                    <td>Примітки</td>
-                </tr>
-                <tr>
-                    <td class="ta-l">Утримання будинків і споруд та прибудинкових територій</td>
-                    <td>[house_number]</td>
-                    <td>[house_name]</td>
-                    <td>[house_number]</td>
-                </tr>
-                <tr>
-                    <td class="ta-l">Газопостачання</td>
-                    <td>[gas_number]</td>
-                    <td>[gas_name]</td>
-                    <td>[gas_notice]</td>
-                </tr>
-            </table>
+            <div class="under_field_line ta-l"><i>Від [bankIdlastName] [bankIdfirstName] [bankIdmiddleName]</i><span>(прізвище, ім’я, по батькові)</span></div>
+            <div class="under_field_line ta-l"><i>зареєстроване (для орендарів — фактичне) місце проживання: [place_of_living]</i></div>
+            <div class="under_field_line ta-l"></div>
 
+            <div class="date_subm">
+                <div class="month-fl-sm"><span></span><span></span>20<span></span>р.</div>
+                <div class="signature"><span>(підпис)</span></div>
+                <div class="clear"></div>
+            </div>
+            <div class="clear"></div>
+        </div>
