--- a/wf-region/src/main/resources/pattern/print/subsidy.html
+++ b/wf-region/src/main/resources/pattern/print/subsidy.html
@@ -112,12 +112,23 @@
             ul, img {page-break-inside: avoid;}
     }
 </style>
+        <div class="line_col ta-r">
+            <div class="under_field w350 ta-l"><i></i><span>(найменування структурного підрозділу</span></div><br />
+            <div class="under_field w350 ta-l"><i></i><span>з питань соціального захисту населення)</span></div>
+        </div>
         <div class="line_col ta-c m-t-25">
             ЗАЯВА<br />
             про призначення житлової субсидії<br />
             <div class="under_field_line ta-l"><i>Від [bankIdlastName] [bankIdfirstName] [bankIdmiddleName]</i><span>(прізвище, ім’я, по батькові)</span></div>
             <div class="under_field_line ta-l"><i>зареєстроване (для орендарів — фактичне) місце проживання: [place_of_living]</i></div>
             <div class="under_field_line ta-l"></div>
+            <div class="under_field_line ta-l"><i>контактний телефон [phone]</i>
+                <div class="under_field_line ta-l m-l-300"><i>паспорт: [bankIdPassport]</i>
+                    <div class="under_field_line ta-l m-l-180"><i></i></div></div></div>
+            <div class="under_field_line ta-l"><span>(ким і коли виданий)</span><div class="month-fl"><span></span><span></span><span></span>р.</div></div>
+            <div class="under_field_line ta-l"><i>реєстраційний номер облікової картки платника податків: [book]</i><span>(крім осіб, які мають відмітку у паспорті про право здійснювати платежі за серією та номером паспорта)</span></div>
+            <div class="under_field_line wub ta-l ti-15 m-t-25">Прошу призначити субсидію для відшкодування витрат на оплату житлово-комунальних послуг, на придбання скрапленого газу, твердого та рідкого пічного побутового палива (необхідне підкреслити).</div>
+            <div class="under_field_line wub ta-l ti-15">Відомості про житлово-комунальні послуги, якими користуються особи, які зареєстровані (фактично проживають) у житловому приміщенні/будинку.</div>
 
             <div class="date_subm">
                 <div class="month-fl-sm"><span></span><span></span>20<span></span>р.</div>
