--- a/central-js/client/app/service/city/absent.html
+++ b/central-js/client/app/service/city/absent.html
@@ -43,7 +43,18 @@
                         <span class="error" ng-if="absentMessageForm.email.$error.email">Введіть коректну email адресу</span>
                     </div>
 
-                    <input ng-intl-tel-input />
+                    <div ng-intl-tel-input>
+<!--                         type="text"
+                        data-ng-model="absentMessage.email" 
+                        name="email" 
+                        placeholder="Ваш email:" 
+                        required 
+                        ng-keyup="emailKeydown($event, absentMessageForm, absentMessage)"
+                        ng-model-options="{ updateOn: 'blur' }" 
+                        class="form-control"
+                        /> -->
+                    </div>
+
                 </form>
             </div>
           </div>
