--- a/wf-region/src/main/resources/bpmn/dev/webmail-template-feedback.html
+++ b/wf-region/src/main/resources/bpmn/dev/webmail-template-feedback.html
@@ -36,7 +36,7 @@
             <table width="800" cellpadding="0" cellspacing="0" border="0" style="border-collapse: collapse;">
                 <!--header line statrs-->
                 <tr>
-                    <td bgcolor="#5CA3CB" style="padding: 35px 120px; color: white;"><b style="font-size: 24px;">iGov.org.ua</b><br />портал державних послуг</td>
+                    <td bgcolor="#5CA3CB" style="padding: 35px 120px; color: white;"><b style="font-size: 24px;">iGov.<span>org.<span>ua</span></span></b><br />портал державних послуг</td>
                 </tr>
                 <!--header line end-->
                 <!--content statrs-->
@@ -46,7 +46,7 @@
                         <table width="800" cellpadding="0" cellspacing="0" border="0" style="border-collapse: collapse;">
                             <tr>
                                 <td style="padding: 35px 120px;">
-                                    <h3>Шановний(-а), ${bankIdfirstName} ${bankIdmiddleName}.</h3>
+                                    <h3>Шановний(-а) ${bankIdfirstName} ${bankIdmiddleName}.</h3>
                                     <p>
                                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed cursus vel augue eget sodales. Cras ante augue, euismod at tortor vitae, consequat tristique lectus.
                                     </p>
