--- a/wf-region/src/main/resources/pattern/print/subsidy_zayava.html
+++ b/wf-region/src/main/resources/pattern/print/subsidy_zayava.html
@@ -114,13 +114,13 @@
         }
     </style>
         <div class="line_col ta-r">
-            <div class="under_field w350 ta-l"><i></i><span>(найменування структурного підрозділу</span></div><br />
-            <div class="under_field w350 ta-l"><i></i><span>з питань соціального захисту населення)</span></div>
+            <div class="under_field w350 ta-l"><u>[area]</u></u><i></i><span>(найменування структурного підрозділу</span></div><br />
+            <div class="under_field w350 ta-l"><u>Дніпропетровська</u></u><i></i><span>з питань соціального захисту населення)</span></div>
         </div>
         <div class="line_col ta-c m-t-25">
             ЗАЯВА<br />
             про призначення житлової субсидії<br />
-            <div class="under_field_line ta-l"><i>Від [bankIdlastName] [bankIdfirstName] [bankIdmiddleName]</i><span>(прізвище, ім’я, по батькові)</span></div>
+            <div class="under_field_line ta-l"><i>Від <u>[bankIdlastName]</u> <u>[bankIdfirstName]</u> <u>[bankIdmiddleName]</u></i><span>(прізвище, ім’я, по батькові)</span></div>
             <div class="under_field_line ta-l"><i>зареєстроване (для орендарів — фактичне) місце проживання: [place_of_living]</i></div>
             <div class="under_field_line ta-l"></div>
             <div class="under_field_line ta-l"><i>контактний телефон [phone]</i>
