--- a/wf-region/src/main/resources/bpmn/dev/webmail-template-employee_info.html
+++ b/wf-region/src/main/resources/bpmn/dev/webmail-template-employee_info.html
@@ -1,3 +1,7 @@
+<!DOCTYPE html>
+<html>
+<head lang="ru">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <style type="text/css">
         body {margin: 0; padding: 0;}
         #mailer-body {font: 400 18px/20px 'Calibri';}
@@ -23,6 +27,8 @@
         #mailer-body textarea:focus {outline: 0;}
         #mailer-body button {height: 30px; padding: 0 25px; border: 0; border-radius: 3px; line-height: 30px; font-size: 14px; font-weight: 600; background: #2F70AF; cursor: pointer; color: white; display: inline-block;}
     </style>
+</head>
+<body>
 <table width="100%" cellspacing="0" cellpadding="0" border="0" style="border-collapse: collapse;" id="mailer-body">
     <tbody>
     <tr>
@@ -39,19 +45,14 @@
                         <table width="800" cellpadding="0" cellspacing="0" border="0" style="border-collapse: collapse;">
                             <tr>
                                 <td style="padding: 35px 120px;">
-                                    <h3>Шановний(-а) ${bankIdfirstName} ${bankIdmiddleName}.</h3>
+                                    <h3>Шановний колего!</h3>
                                     <p>
-                                        Підготовка довідки про перебування на квартирному обліку громадян, які потребують поліпшення житлових умов, успішно завершена!<br />
-										Оригінал документу Ви можете отримати в Центрі надання адміністративних послуг Солом'янського району, що знаходиться за адресою: м.Київ, пр. Повітрофлотський, 41
-                                  
-                                    </p>
-                                    <p>
- 										У випадку, якщо Ви перебуваєте на пільговій квартирній черзі, при собі необхідно мати оригінал документу, який підтверджує це (наприклад, Довідка з місця роботи).
+                                        У Вас в черзі на обробку  зареєстровано нове звернення щодо реєстрації авто з пробігом<br />
+                                        Відпрацюйте це звернення на порталі <a href="#current-page">region.igov.org.ua/admin</a>
                                     </p>
                                     <hr style="width: 100%; height: 0; margin: 30px 0 15px 0; background: #dddddd; border: 0; border-bottom: 1px solid #dddddd;" />
                                     <p>
                                         З повагою,<br />
-                                        Центр надання адміністративних послуг Солом'янського району м.Киів,<br />
                                         Команда Порталу державних послуг <a href="#current-page">iGov.org.ua</a>.
                                     </p>
                                 </td>
@@ -69,3 +70,5 @@
     </tr>
     </tbody>
 </table>
+</body>
+</html>
