--- a/central-js/client/app/service/city/absent.html
+++ b/central-js/client/app/service/city/absent.html
@@ -1,7 +1,5 @@
 <div class="row">
     <div class="col-md-12 text-center">
-                        <div ng-intl-tel-input ng-tattr="aaa">яяя</div>
-
         <strong>На жаль, поки що у Вашому регіоні неможливе надання цієї послуги в електронному вигляді.</strong>
         <a class="ctrls-admin ctrls-srvc-add" href="" ng-if="bAdmin" title="Додати послугу в цьому місті"><span class="glyphicon glyphicon-plus"></span> Додати послугу</a>
     </div>
@@ -44,18 +42,14 @@
                         <span class="error" ng-if="absentMessageForm.email.$error.required">Введіть Вашу email-адресу</span>
                         <span class="error" ng-if="absentMessageForm.email.$error.email">Введіть коректну email адресу</span>
                     </div>
-
-<!--                         type="text"
-                        data-ng-model="absentMessage.email" 
-                        name="email" 
-                        placeholder="Ваш email:" 
-                        required 
-                        ng-keyup="emailKeydown($event, absentMessageForm, absentMessage)"
-                        ng-model-options="{ updateOn: 'blur' }" 
-                        class="form-control"
-                        /> -->
-                    </div>
-
+                    <!-- FIXME div class="validation-message"
+                                 ng-if="form.$submitted"
+                                 ng-messages="form[property.id].$error">
+                                <div ng-message="required">Необхідно заповнити.</div>
+                                <div ng-message="pattern">Значення має бути числом.</div>
+                                <div ng-message="tel">Помилка в номері телефону.</div>
+                                <div ng-message="email">Помилка в email.</div>
+                            </div -->
                 </form>
             </div>
           </div>
