--- a/central-js/client/app/service/city/built-in/bankid.html
+++ b/central-js/client/app/service/city/built-in/bankid.html
@@ -130,6 +130,16 @@
                                        class="form-control"
                                        value="">
 
+                                <input ng-switch-when="tel"
+                                      type="text"
+                                      name="{{property.id}}"
+                                      ng-model="data.formData.params[property.id].value"
+                                      ng-tel-field="{ defaultCountry: 'auto', autoFormat: true, allowExtensions: false, preferredCountries: ['ua'], autoPlaceholder: true }"
+                                      ng-required="property.required"
+                                      class="form-control"
+                                      value=""
+                                      >
+
                                 <p class="input-group"
                                    ng-switch-when="date">
                                     <input type="text"
