--- a/dashboard-js/client/app/reports/reports.html
+++ b/dashboard-js/client/app/reports/reports.html
@@ -21,7 +21,13 @@
       <div class="col-xs-6 col-sm-2"><input class="form-control" ng-model="statistic.from" ng-required="true"></div>
       <div class="col-xs-6 col-sm-2"><input class="form-control" ng-model="statistic.to" ng-required="true"></div>
       <div class="col-xs-6 col-sm-1"><label>БП:</label></div>
-      <div class="col-xs-6 col-sm-3"><input class="form-control" ng-model="statistic.sBP" ng-required="true"></div>
+      <div class="col-xs-6 col-sm-3">
+        <select name="bpID"
+                ng-model="statistic.sBP"
+                ng-options="processDefinition.sID as processDefinition.sName for processDefinition in processesList"
+                ng-required="true"
+                class="form-control"></select>
+      </div>
       <div class="col-xs-6 col-sm-2">
         <a ng-href="{{statisticLink()}}" class="btn btn-success" target="_self">Зберегти</a>
       </div>
