--- a/central-js/client/app/documents/bankid/index.html
+++ b/central-js/client/app/documents/bankid/index.html
@@ -20,7 +20,7 @@
     </div>
     <div class="text-center"
          ng-show="authProcess">
-        <img class="text-center section-preloader"
+        <img class="text-center"
              src="assets/images/loading.gif"
              alt="Loading"/>
     </div>
