--- a/central-js/client/app/documents/index.html
+++ b/central-js/client/app/documents/index.html
@@ -15,7 +15,7 @@
             <div ui-view="content"></div>
             <div ui-view="view"></div>
         </div>
-        <div class="text-center section-preloader"
+        <div class="text-center"
              ng-show="loading">
             <img class="text-center"
                  src="assets/images/loading.gif"
