--- a/central-js/client/app/service/index/services.html
+++ b/central-js/client/app/service/index/services.html
@@ -157,7 +157,7 @@
              ng-if="($index+1)%3 == 0"
              ng-repeat-end></div>
     </div>
-    <div class="text-center section-preloader" ng-show="spinner">
+    <div class="text-center" ng-show="spinner">
         <img class="text-center" src="/assets/images/loading.gif" alt="Loading" />
     </div>
 </div>
