--- a/central-js/client/app/service/instruction.html
+++ b/central-js/client/app/service/instruction.html
@@ -3,8 +3,8 @@
         <div class="row no-margin-bottom">
             <div style="margin:0px 10px 0px 10px"
                  class="col-md-50"
-                 ng-if="service.sInfo.trim()!=''">
-                {{service.sInfo}}
+                 ng-if="service.sInfo.trim()!=''"
+                 ng-bind-html="service.sInfo">
             </div>
             <div class="col-md-10"
                  ng-if="service.sInfo.trim()==''">
