--- a/central-js/client/app/service/legislation.html
+++ b/central-js/client/app/service/legislation.html
@@ -3,8 +3,8 @@
         <div class="row no-margin-bottom">
             <div style="margin:0px 10px 0px 10px"
                  class="col-md-50"
-                 ng-if="service.sLaw.trim()!=''">
-                {{service.sLaw}}
+                 ng-if="service.sLaw.trim()!=''"
+                 ng-bind-html="service.sLaw">
             </div>
             <div class="col-md-10"
                  ng-if="service.sLaw.trim()==''">
