--- a/central-js/client/app/service/questions.html
+++ b/central-js/client/app/service/questions.html
@@ -3,8 +3,8 @@
         <div class="row no-margin-bottom">
             <div style="margin:0px 10px 0px 10px"
                  class="col-md-50"
-                 ng-if="service.sFAQ.trim()!=''">
-                {{service.sFAQ}}
+                 ng-if="service.sFAQ.trim()!=''"
+                 ng-bind-html="service.sFAQ">
             </div>
             <div class="col-md-10"
                  ng-if="service.sFAQ.trim()==''">
