--- a/central-js/client/app/service/questions.html
+++ b/central-js/client/app/service/questions.html
@@ -1,4 +1,4 @@
-<div class="list-group">
+<div class="container">
     <div style="margin-top:20px; font-size:25px;">{{service.sName}}</div>
     <div style="margin-bottom:20px; font-size:18px;color:#cccccc;">{{service.sSubjectOperatorName}}</div>
     <div class="row">
