--- a/central-js/client/app/service/instruction.html
+++ b/central-js/client/app/service/instruction.html
@@ -1,4 +1,4 @@
-<div class="list-group">
+<div class="container">
     <div style="margin-top:20px; font-size:25px;">{{service.sName}}</div>
     <div style="margin-bottom:20px; font-size:18px;color:#cccccc;">{{service.sSubjectOperatorName}}</div>
     <div class="row">
@@ -9,17 +9,17 @@
                     <a ui-sref="index.service.general({id: service.nID})">Послуга</a>
                 </li>
                 <li ui-sref-active="active"
-                    ng-if="service.sInfo.trim() || bAdmin"
+                    ng-if="service.sInfo.trim() || (false && bAdmin)"
                     role="presentation">
                     <a ui-sref="index.service.instruction({id: service.nID})">Як працює</a>
                 </li>
                 <li ui-sref-active="active"
-                    ng-if="service.sLaw.trim() || bAdmin"
+                    ng-if="service.sLaw.trim() || (false && bAdmin)"
                     role="presentation">
                     <a ui-sref="index.service.legislation({id: service.nID})">Законодавство</a>
                 </li>
                 <li ui-sref-active="active"
-                    ng-if="service.sFAQ.trim() || bAdmin"
+                    ng-if="service.sFAQ.trim() || (false && bAdmin)"
                     role="presentation">
                     <a ui-sref="index.service.questions({id: service.nID})">Поширенні питання</a>
                 </li>
