&nbsp;iGov&nbsp;

--- a/central-js/client/app/about/about.html
+++ b/central-js/client/app/about/about.html
@@ -11,7 +11,7 @@
                 
                 <p dir="ltr"
                    style="line-height:1.7999999999999998;margin-top:0pt;margin-bottom:5pt;">
-                    <span><span style="color: rgb(0, 0, 0); vertical-align: baseline; white-space: pre-wrap; background-color: transparent;">Цей портал зроблено волонтерською командою </span><span style="color: rgb(0, 0, 0); font-style: normal; vertical-align: baseline; white-space: pre-wrap; background-color: transparent;"> iGov </span><span style="color: rgb(0, 0, 0); vertical-align: baseline; white-space: pre-wrap; background-color: transparent;"> в рамках боротьби з корупцією в Україні та вдосконалення бізнес-процесів в наших державних органах.</span></span>
+                    <span><span style="color: rgb(0, 0, 0); vertical-align: baseline; white-space: pre-wrap; background-color: transparent;">Цей портал зроблено волонтерською командою </span>&nbsp;iGov&nbsp;<span style="color: rgb(0, 0, 0); vertical-align: baseline; white-space: pre-wrap; background-color: transparent;"> в рамках боротьби з корупцією в Україні та вдосконалення бізнес-процесів в наших державних органах.</span></span>
                 </p>
 
                 <p dir="ltr"
