absent form styling + preloader top margin added

--- a/central-js/client/app/documents/index.html
+++ b/central-js/client/app/documents/index.html
@@ -17,7 +17,7 @@
         </div>
         <div class="text-center"
              ng-show="loading">
-            <img class="text-center"
+            <img class="text-center section-preloader"
                  src="assets/images/loading.gif"
                  alt="Loading"/>
         </div>
