--- a/central-js/client/app/service/index/services.html
+++ b/central-js/client/app/service/index/services.html
@@ -158,6 +158,6 @@
              ng-repeat-end></div>
     </div>
     <div class="text-center" ng-show="spinner">
-        <img class="text-center" src="/assets/images/loading.gif" alt="Loading" />
+        <img class="text-center section-preloader" src="/assets/images/loading.gif" alt="Loading" />
     </div>
 </div>
