fixed phone validation (css + default country, wip-2)

--- a/central-js/client/app/service/city/built-in/bankid.html
+++ b/central-js/client/app/service/city/built-in/bankid.html
@@ -134,7 +134,7 @@
                                       type="text"
                                       name="{{property.id}}"
                                       ng-model="data.formData.params[property.id].value"
-                                      ng-tel-field="{ defaultCountry: 'auto', autoFormat: true, allowExtensions: false, preferredCountries: ['ua'], autoPlaceholder: true }"
+                                      ng-tel-field="{defaultCountry:'ua', autoFormat:true, allowExtensions:false, preferredCountries:['ua'], autoPlaceholder:true}"
                                       ng-required="property.required"
                                       class="form-control"
                                       value="">                                       
