naDvirna_rda remove INN fields

--- a/wf-region/src/main/resources/pattern/print/dnepr_dms_printVersion.html
+++ b/wf-region/src/main/resources/pattern/print/dnepr_dms_printVersion.html
@@ -1,5 +1,5 @@
 
-
+<div>
 <style type="text/css">
 html, body {margin: 0; padding: 0; height: 100%; font: 400 14px/16px 'Tahoma';}
 
@@ -97,18 +97,18 @@ p {font-size: 11px;}
 
 
 </style>
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head lang="ru">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>Заява - регистрация проживания</title>
-
+ -->
     <!-- Styles :: THEME -->
-    <link rel="stylesheet" href="media_print.css"/>
+    <!-- <link rel="stylesheet" href="media_print.css"/>
     <link rel="stylesheet" href="documents.css"/>
 </head>
 <body>
-<section class="print_wrap">
+<section class="print_wrap"> -->
     <div class="line_col ta-r">
         <div class="under_field w350 ta-l"><i>Начальникові</i><span>(найменування</span></div><br />
         <div class="under_field w350 ta-l"><i></i><span>територіального підрозділу ДМС України)</span></div><br />
