--- a/central-js/client/app/footer/footer.html
+++ b/central-js/client/app/footer/footer.html
@@ -1,58 +1,47 @@
 <footer class="footer">
-    <div class="container"
-         style="margin-top: 10px;margin-bottom: 5px; line-height: 20px;">
-        <table style="width: 100%">
-            <tr>
-                <td>
-                    <table>
-                        <tr>
-                            <td style="width:200px;">
-                                <p class="text-muted text-center">
-                                    <a href="https://docs.google.com/forms/d/1uXt5BEVAWBhftuDNWQTUUJJp_etYKhXyh70kCdznCqY/viewform">Державним
-                                                                                                                                    органам:
-                                        <br>додати свою послугу</a>
-                                </p>
-                            </td>
-                            <td style="width:150px;">
-                                <p class="text-muted text-center">
-                                    <a href="https://docs.google.com/forms/d/1zyLyRcsL0wnB_VQeondrULHsEUi1dIaUSLJVWsdzbDY/viewform">Немає
-                                                                                                                                    якоїсь
-                                        <br>послуги?</a>
-                                </p>
-                            </td>
-                            <td style="width:150px;">
-                                <p class="text-muted text-center">
-                                    <a href="https://www.facebook.com/igov.org.ua">Новини порталу
-                                        <br>на Facebook</a>
-                                </p>
-                            </td>
-                            <td style="width:150px;">
-                                <p class="text-muted text-center">
-                                    <a href="https://docs.google.com/forms/d/1ueU6PQa-OSA2Tsisxx2RbRWRJ9rLsFlPBlHsr7W-4gE/viewform">Помилка
-                                                                                                                                    або
-                                                                                                                                    баг
-                                        <br>на Порталі?</a>
-                                </p>
-                            </td>
-
-                            <td style="width:150px;">
-                                <p class="text-muted text-center">
-                                    <a href="https://github.com/e-government-ua/i/wiki/%D0%AF%D0%BA-%D0%BF%D0%BE%D1%87%D0%B0%D1%82%D0%B8-%D1%80%D0%BE%D0%B1%D0%BE%D1%82%D1%83">Приєднатись
-                                        <br>на GitHub!</a>
-                                </p>
-                            </td>
-
-
-                        </tr>
-                    </table>
-                </td>
-                <td>
-                    <p class="text-muted text-right">
+    <div class="container footer-container text-muted text-center">
+        <div class="row">
+<!--             <div class=".col-lg-4 col-md-6 col-sm-6 col-xs-12">
+                <div class="row"> -->
+                    <div class="col-xs-3 col-sm-2 col-md-2 col-lg-2">
+                        <a href="https://docs.google.com/forms/d/1uXt5BEVAWBhftuDNWQTUUJJp_etYKhXyh70kCdznCqY/viewform">
+                        Державним органам:
+                        <br>додати свою послугу</a>
+                    </div>
+                    <div class="col-xs-3 col-sm-2 col-md-2 col-lg-2">
+                        <a href="https://docs.google.com/forms/d/1zyLyRcsL0wnB_VQeondrULHsEUi1dIaUSLJVWsdzbDY/viewform">
+                        Немає якоїсь
+                        <br>послуги?</a>
+                    </div>
+                    <div class="col-xs-3 col-sm-2 col-md-2 col-lg-2">
+                        <a href="https://www.facebook.com/igov.org.ua">
+                        Новини порталу
+                        <br>на Facebook</a>
+                    </div>
+<!--                 </div>
+            </div>
+            <div class=".col-lg-8 col-md-6 col-sm-6 col-xs-12">
+                <div class="row"> -->
+                    <div class="col-xs-3 col-sm-2 col-md-2 col-lg-2">
+                        <a href="https://docs.google.com/forms/d/1ueU6PQa-OSA2Tsisxx2RbRWRJ9rLsFlPBlHsr7W-4gE/viewform">
+                        Помилка або баг
+                        <br>на Порталі?</a>
+                    </div>
+                    <div class="clearfix visible-xs-block footer-row-2"></div>
+                    <div class="col-xs-3 col-sm-2 col-md-2 col-lg-1">
+                        <a href="https://github.com/e-government-ua/i/wiki/%D0%AF%D0%BA-%D0%BF%D0%BE%D1%87%D0%B0%D1%82%D0%B8-%D1%80%D0%BE%D0%B1%D0%BE%D1%82%D1%83">
+                        Приєднатись
+                        <br>на GitHub!</a>
+                    </div>
+                    <div class="col-xs-9 col-sm-2 col-md-2 col-lg-3">
+                        <p class="text-right">
                         Зроблено ІТ-волонтерами
-                        <br>alpha-версія
-                    </p>
-                </td>
-            </tr>
-        </table>
+                        <br>alpha-версія</p>
+                    </div>
+<!--                 </div>
+            </div> -->
+        </div>
+        <!-- end of row -->
     </div>
+    <!-- end of footer-container -->
 </footer>
