fix for #586, change views for index.documents

--- a/central-js/client/app/documents/index.html
+++ b/central-js/client/app/documents/index.html
@@ -3,7 +3,7 @@
         <div class="col-md-12">
             <ul class="nav nav-tabs">
                 <li ui-sref-active="active"
-                    role="presentation"><a ui-sref="index.documents.bankid">Мої документи</a></li>
+                    role="presentation"><a ui-sref="index.documents.user" ui-sref-opts="{reload: true}">Мої документи</a></li>
                 <li ui-sref-active="active"
                     role="presentation"><a ui-sref="index.documents.search">Пошук документу за кодом</a></li>
                 <li ui-sref-active="active"
