--- a/central-js/client/app/header/header.html
+++ b/central-js/client/app/header/header.html
@@ -19,7 +19,7 @@
                     </a>
                 </li>
                 <li class="menu-item" ui-sref-active="selected">
-                    <a ui-sref="index.documents.bankid">
+                    <a ui-sref="index.documents" ui-sref-opts="{reload: true}">
                         <h4>Документи</h4>
                     </a>
                 </li>
