--- a/central-js/client/index.html
+++ b/central-js/client/index.html
@@ -146,6 +146,7 @@
 <script src="app/documents/controllers/documentsbankid.controller.js"></script>
 <script src="app/documents/controllers/documentscontent.controller.js"></script>
 <script src="app/documents/controllers/documentssearch.controller.js"></script>
+<script src="app/documents/controllers/documentsuser.controller.js"></script>
 <script src="app/documents/controllers/modal.controller.js"></script>
 <script src="app/documents/document.js"></script>
 <script src="app/documents/factories/bankiddocuments.factory.js"></script>
