--- a/central-js/client/app/service/city/built-in/bankid.submitted.html
+++ b/central-js/client/app/service/city/built-in/bankid.submitted.html
@@ -2,8 +2,7 @@
 <div style="margin-bottom:20px; font-size:18px;color:#cccccc;">{{service.sSubjectOperatorName}}</div-->
 
 <div class="list-group">
-    <div class="list-group-item"
-         ng-class="{'disabled': data.city}">
+    <div class="list-group-item disabled">
         <div class="row no-margin-bottom">
             <div class="col-md-12 form-inline">
                 <span class="step">Крок 1. Оберіть свій регіон </span>
@@ -13,17 +12,15 @@
                     <select class="form-control"
                             name="region"
                             ng-model="data.region"
-                            ng-options="region as region.sName for region in [data.region] | orderBy:'sName'"
-                            ng-disabled="data.city"></select>
+                            ng-options="region as region.sName for region in [data.region] | orderBy:'sName'" disabled></select>
                 </div>
                 <div style="display:inline-block"
-                     ng-if="data.region">
+                     ng-if="ngIfCity()">
                     <span>Місто</span>
                     <select class="form-control"
                             name="city"
                             ng-model="data.city"
-                            ng-options="city as city.sName for city in [data.city] | orderBy:'sName'"
-                            ng-disabled="data.city"></select>
+                            ng-options="city as city.sName for city in [data.city] | orderBy:'sName'" disabled></select>
                 </div>
             </div>
         </div>
