--- a/central-js/client/app/about/about.html
+++ b/central-js/client/app/about/about.html
@@ -316,7 +316,7 @@
                                 <td style="border-style: solid; border-width: 1px; border-color: rgb(169, 169, 169); vertical-align: bottom; padding: 3px;">
                                     <p dir="ltr"
                                        style="line-height:1.2;margin-top:0pt;margin-bottom:0pt;">
-                                        <span><span style="color: rgb(0, 0, 0); vertical-align: baseline; white-space: pre-wrap; background-color: transparent;">Вилинский Александр, Днепропетровск</span></span>
+                                        <span><span style="color: rgb(0, 0, 0); vertical-align: baseline; white-space: pre-wrap; background-color: transparent;">Вилинский Александр, Киев</span></span>
                                     </p>
                                 </td>
                                 <td style="border-style: solid; border-width: 1px; border-color: rgb(169, 169, 169); vertical-align: bottom; padding: 3px;">
