misprint fixes (wip-1)

--- a/central-js/client/app/order/search.html
+++ b/central-js/client/app/order/search.html
@@ -45,7 +45,7 @@
 
                     <div ng-show="orders.length > 0">
                         <div>
-                            Тип заявки: Услуга
+                            Тип заявки: Послуга
                         </div>
                         <table class="table table-striped">
                             <thead>
