--- a/central-js/client/app/documents/search/index.html
+++ b/central-js/client/app/documents/search/index.html
@@ -19,7 +19,7 @@
                                       >
                                     <div class="row">
                                         <div class="form-group">
-                                            <label for="typeId">Оберить тип документу<!--em>*</em--></label>
+                                            <label for="typeId">Оберіть тип документу<!--em>*</em--></label>
                                             <select class="form-control"
                                                     required
                                                     ng-model="typeId"
@@ -30,7 +30,7 @@
                                     </div>
                                     <div class="row">
                                         <div class="form-group">
-                                            <label for="operatorId">Оберить оператора<!--em>*</em--></label>
+                                            <label for="operatorId">Оберіть оператора<!--em>*</em--></label>
                                             <select class="form-control"
                                                     required
                                                     ng-model="operatorId"
