https://github.com/e-government-ua/i/issues/610 front revert rollback+

--- a/dashboard-js/client/app/tasks/tasks.html
+++ b/dashboard-js/client/app/tasks/tasks.html
@@ -140,10 +140,10 @@
                     class="btn btn-success">Роздрукувати
             </button>
 
-            <!--select class="aPatternPrint form-control_"
+            <select class="aPatternPrint form-control_"
                     ng-hide="!printTemplate.containsPrintTemplate()"
                     ng-options="oPatternPrint.sID as oPatternPrint.sLabel for oPatternPrint in printTemplate.aPatternPrint()"
-                    ng-model="'sBody_0'"></select-->
+                    ng-model="'sBody_0'"></select>
               
             <!--select class="aPatternPrint form-control_"
                     ng-hide="!printTemplate.containsPrintTemplate()"
