--- a/wf-region/src/main/resources/pattern/print/subsidy_zayava.html
+++ b/wf-region/src/main/resources/pattern/print/subsidy_zayava.html
@@ -114,8 +114,8 @@
         }
     </style>
         <div class="line_col ta-r">
-            <div class="under_field w350 ta-l"><u>[area]</u></u><i></i><span>(найменування структурного підрозділу</span></div><br />
-            <div class="under_field w350 ta-l"><u>Дніпропетровська</u></u><i></i><span>з питань соціального захисту населення)</span></div>
+            <div class="under_field w350 ta-l"><u>[[area]]</u></u><i></i><span>(найменування структурного підрозділу</span></div><br />
+            <div class="under_field w350 ta-l"><u>[Дніпропетровська]</u></u><i></i><span>з питань соціального захисту населення)</span></div>
         </div>
         <div class="line_col ta-c m-t-25">
             ЗАЯВА<br />
