--- a/wf-region/src/main/resources/pattern/print/subsidy_zayava.html
+++ b/wf-region/src/main/resources/pattern/print/subsidy_zayava.html
@@ -114,8 +114,8 @@
         }
     </style>
         <div class="line_col ta-r">
-            <div class="under_field w350 ta-l"><u>[[area]]</u></u><i></i><span>(найменування структурного підрозділу</span></div><br />
-            <div class="under_field w350 ta-l"><u>[Дніпропетровська]</u></u><i></i><span>з питань соціального захисту населення)</span></div>
+            <div class="under_field w350 ta-l">[area]</u><i></i><span>(найменування структурного підрозділу</span></div><br />
+            <div class="under_field w350 ta-l">[Дніпропетровська]</u><i></i><span>з питань соціального захисту населення)</span></div>
         </div>
         <div class="line_col ta-c m-t-25">
             ЗАЯВА<br />
@@ -124,8 +124,8 @@
             <div class="under_field_line ta-l"><i>зареєстроване (для орендарів — фактичне) місце проживання: [place_of_living]</i></div>
             <div class="under_field_line ta-l"></div>
             <div class="under_field_line ta-l"><i>контактний телефон [phone]</i>
-                <div class="under_field_line ta-l m-l-300"><i>паспорт: [bankIdPassport]</i>
-                    <div class="under_field_line ta-l m-l-180"><i></i></div></div></div>
+                <div class="under_field_line ta-l m-l-300"><i>паспорт: </i>
+                    <div class="under_field_line ta-l m-l-180"><i>[bankIdPassport]</i></div></div></div>
             <div class="under_field_line ta-l"><span>(ким і коли виданий)</span><div class="month-fl"><span></span><span></span><span></span>р.</div></div>
             <div class="under_field_line ta-l"><i>реєстраційний номер облікової картки платника податків: [book]</i><span>(крім осіб, які мають відмітку у паспорті про право здійснювати платежі за серією та номером паспорта)</span></div>
             <div class="under_field_line wub ta-l ti-15 m-t-25">Прошу призначити субсидію для відшкодування витрат на оплату житлово-комунальних послуг, на придбання скрапленого газу, твердого та рідкого пічного побутового палива (необхідне підкреслити).</div>
